# GitCompass

./: .flake8  .gitignore  CLAUDE.md  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  PR_DESCRIPTION.md  README.md  pyproject.toml  requirements.txt
.github/: changelog-configuration.json
.github/workflows/: publish.yml  release.yml  tests.yml
checks/: check_makefile_usage.py
config/: config.yaml.example
config/assets/: logo
docs/: API_REFERENCE.md  CONFIGURATION.md  README.md
examples/: advanced_project_setup.py  create_issue_hierarchy.py  end_to_end_test.py
issues/: future_improvements.md  template_feature.md
src/gitcompass/: __init__.py  cli.py
src/gitcompass/auth/: __init__.py  github_auth.py
src/gitcompass/issues/: __init__.py  issue_manager.py
src/gitcompass/projects/: __init__.py  project_manager.py
src/gitcompass/roadmap/: __init__.py  roadmap_manager.py
src/gitcompass/templates/issue/: bug_report.yaml  feature_request.yaml
src/gitcompass/templates/project/: agile_kanban.yaml
src/gitcompass/templates/roadmap/: quarterly_release.yaml
src/gitcompass/utils/: __init__.py  config.py  templates.py
src/octomaster/: __init__.py  cli.py
src/octomaster/auth/: __init__.py  github_auth.py
src/octomaster/issues/: __init__.py  issue_manager.py
src/octomaster/projects/: __init__.py  project_manager.py
src/octomaster/roadmap/: __init__.py  roadmap_manager.py
src/octomaster/utils/: __init__.py  config.py
tests/: conftest.py
tests/fixtures/: github_api_responses.py
tests/integration/: test_end_to_end.py  test_template_integration.py
tests/unit/: test_config.py  test_github_auth.py  test_templates.py
tools/: create_issues.py
