[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octomaster"
version = "0.1.0"
description = "A powerful Python-based tool for managing GitHub projects, issues, sub-issues, and roadmaps"
authors = [{name = "PimpMyNines", email = "team@pimpmy9s.com"}]
requires-python = ">=3.8"
dependencies = [
    "pygithub>=1.58.0",
    "click>=8.1.3",
    "pyyaml>=6.0",
    "requests>=2.28.1",
    "python-dotenv>=0.21.0",
]

[project.scripts]
octomaster = "octomaster.cli:main"

[project.urls]
Homepage = "https://github.com/PimpMyNines/github-project-management"
Repository = "https://github.com/PimpMyNines/github-project-management.git"
Issues = "https://github.com/PimpMyNines/github-project-management/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
